@@ -1,31 +1,39 @@
 package team.snof.simplesearch.search.engine;
 
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Component;
 import team.snof.simplesearch.common.util.CSVFileReader;
 import team.snof.simplesearch.search.model.dao.doc.Doc;
 
-import java.util.ArrayList;
-import java.util.Collections;
+import java.io.File;
+import java.util.Arrays;
 import java.util.List;
 
+@Component
 public class IndexGenerateRunner {
+    @Autowired
+    DocParser docParser;
+    @Autowired
+    IndexBuilder indexBuilder;
 
-    public static void main(String[] args) {
-
+    public void generate() throws Exception {
         // 获取地址列表
-        String root = "";
-        List<String> filePathList = new ArrayList<String>(Collections.singletonList(""));
+        String root = "D:/GoCamp/wukong_release/";
+        File file = new File(root);
+        List<String> fileNameList = List.of(file.list());
 
         // 从csv文件获取Doc
-        for (String filePath: filePathList) {
+        for (String fileName: fileNameList) {
+            String filePath = root + fileName;
             List<Doc> docList = CSVFileReader.readFile(filePath);
 
             // 解析文件和存储文件
-            DocParser docParser = new DocParser();
             docParser.parse(docList);
+            System.out.println("解析文件和存储文件");
         }
 
         // 构建索引并存储
-        IndexBuilder indexBuilder = new IndexBuilder();
         indexBuilder.buildIndexes();
+        System.out.println("构建索引并存储");
     }
 }
